# reservations

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
db/: 01_init.sql
examples/: client.rs
proto/: reservations.proto  resource.proto
src/: main.rs  server.rs
src/db/: mod.rs  models.rs  repository.rs
src/service/: mod.rs  reservations.rs
