[package]
name = "reservations"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.9"
